# SPbTrueSkill

./: .gitignore  Cargo.toml  README.md
cache/: 0.json
data/: CFratings_actual.txt  contest_ids.json
distributions/: Cargo.toml
distributions/src/: lib.rs  normal.rs
distributions/src/normal/: tests.rs
read_codeforces/: Cargo.toml
src/: lib.rs  main.rs  nodes.rs  rating_system.rs  read_codeforces.rs
src/rating_system/: distributions.rs  nodes.rs
src/rating_system/nodes/: distributions.rs
