[package]
name = "trueskill_spb"
version = "0.1.0"
authors = ["Nikita Gaevoy <nikgaevoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "distributions", "read_codeforces"
]

[dependencies]
distributions = { path = "distributions" }
read_codeforces = { path = "read_codeforces" }

[dev-dependencies]
float-cmp = "0.8.0"
